# SkyAgent

./: README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  t.py  test.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: code-quality.yml
examples/: basic_example.py  calculator.py  parallel_tool_usage.py  secret.txt  structured_output.py  unix_shell_usage.py
examples/files_as_input/: directory_input.py  file_input.py  image_input.py
examples/files_as_input/input_directory/: sky_agent_readme.md
examples/working_with_a_shell/: caution_this_script_takes_1_year_to_finish.bash  handling_interactive_scripts.py  handling_long_scripts.py  secret_of_life.bash  unix_shell_usage.py
predefined_tools/: google_browser.py
src/miniagent/: agent_tool.py
src/skyagent/: agent.py  agent_tool.py  base_classes.py  exceptions.py  function_executor.py  messages.py  response.py  tool.py  usage.py  utils.py
src/skyagent/agent_orchestrator/: agent_orchestrator.py
src/skyagent/anthropic/: anthropic_agent.py  anthropic_api_adapter.py  anthropic_tool.py
src/skyagent/base/: agent.py  chat_message.py  environment_interactor.py  exceptions.py  llm_api_adapter.py  logger.py  sky_agent_logger.py  tools.py  utils.py
src/skyagent/base/api_adapters/: api_adapter.py  api_adapter_registry.py
src/skyagent/base/api_adapters/predefined_adapters/: anthropic.py  openai.py
src/skyagent/base/input_loader/: file_converter.py  file_extensions.py  file_types.py  input_directory_loader.py  input_file_loader.py  text_splitter.py
src/skyagent/base/loggers/: agent_logger.py  base_agent_logger.py  rich_agent_logger.py
src/skyagent/environment_interactors/: unix_shell_environment_adapter.py
src/skyagent/input_loader/: _conversion_mappings.py  _default_file_converters.py  _defaults.py  _file_extensions.py  file_types.py  input_directory_loader.py  input_file_loader.py  text_splitter.py
src/skyagent/open_ai/: open_ai_agent.py  open_ai_api_adapter.py  open_ai_llm_client.py  open_ai_tool.py
src/skyagent/providers/: provider.py  provider_registry.py
src/skyagent/providers/model_settings/: openai.py
src/skyagent/providers/predefined_providers/: anthropic.py  openai.py
tests/: conftest.py  test_agent_tool_parsing.py  test_base_tool_parsing.py  test_function_execution.py  test_inputs.json  test_tool_parsing.py  utils.py
tests/anthropic_tests/: test_anthropic_basic.py
tests/cassettes/: anthropic_base_input.json  openai_base_input.json
tests/core_tests/: test_base_tool_parsing.py
tests/core_tests/input_file_parsing_tests/: test_html_converter.py  test_input_directory_loader.py  test_input_file_loader.py
tests/core_tests/input_file_parsing_tests/html_parsing_inputs/: test_image_extraction.html
tests/core_tests/input_file_parsing_tests/input_file_parsing_inputs/code/: lorem_ipsum.c
tests/core_tests/input_file_parsing_tests/input_file_parsing_inputs/doc/: lorem_ipsum.docx
tests/core_tests/input_file_parsing_tests/input_file_parsing_inputs/json/: lorem_ipsum.json
tests/core_tests/input_file_parsing_tests/input_files/: json_input.json
tests/file_reader_inputs/: lorem_ipsum.txt
tests/file_reader_inputs/csv/: lorem_ipsum.xlsx
tests/file_reader_inputs/ppt/: lorem_ipsum.pptx
tests/open_ai_tests/: test_open_ai_basic.py
